modify some html file